Add some docker files for building images with JDK 9